# HashSafe

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml
src/: main.rs
tests/: hash_calculation_test.rs
