[package]
name = "hashsafe"
version = "0.1.0"
edition = "2021"
description = "A file hash calculation and verification utility"
authors = ["guillerpsanchez"]

[dependencies]
# For hash calculation
sha2 = "0.10"
hex = "0.4"
# For command line interface
clap = { version = "4.0", features = ["derive"] }
# For native GUI
eframe = "0.22"
rfd = "0.12"

[features]
default = ["gui"]
gui = []
cli = []